Only retain system properties from MAVEN_OPTS
Fixes #16862

(cherry picked from commit a00f3a60d4f6dbe8cc65236fa3561dd3886995f8)